--- a/src/app/pages/book-card/book-card.component.html
+++ b/src/app/pages/book-card/book-card.component.html
@@ -1,11 +1,10 @@
 <mat-card class="card">
-    <mat-card-header>
-      <div mat-card-avatar class="header-image"></div>
+    <mat-card-header class="mb-2">
       <mat-card-title>Once in America</mat-card-title>
       <mat-card-subtitle>Ostap One-Gack</mat-card-subtitle>
     </mat-card-header>
     <img class="max-h-[400px] object-cover object-cover" mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-    <mat-card-content>
+    <mat-card-content class="mt-2">
       <p>
         The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
         A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
@@ -13,8 +12,12 @@
       </p>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-button>LIKE</button>
-      <button mat-button>SHARE</button>
+      <button mat-icon-button aria-label="Edit">
+        <mat-icon>edit</mat-icon>
+      </button>
+      <button mat-icon-button aria-label="Delete">
+        <mat-icon>delete</mat-icon>
+      </button>
     </mat-card-actions>
 </mat-card>
   
