Implement user profile

--- a/src/app/pages/navbar/navbar.component.html
+++ b/src/app/pages/navbar/navbar.component.html
@@ -28,7 +28,7 @@
               <mat-icon>swap_horiz</mat-icon>
               <span>Exchanges</span>
             </button>
-            <button mat-menu-item>
+            <button mat-menu-item (click)="goToProfilePage()">
               <mat-icon>person</mat-icon>
               <span>Profile</span>
             </button>
