Provided all profile functionality

--- a/src/app/pages/forgot-password-form/forgot-password-form.component.html
+++ b/src/app/pages/forgot-password-form/forgot-password-form.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="forgotPasswordForm" (ngSubmit)="handlePasswordForgot()" class="w-[27rem] p-6 rounded-lg shadow-md">
+<form [formGroup]="forgotPasswordForm" (ngSubmit)="handlePasswordForgot()" class="w-full sm:w-[27rem] p-6 rounded-lg shadow-md">
     <div class="mb-2">
         <mat-form-field class="w-full">
             <mat-label class="text-gray-400">Email</mat-label>
