--- a/src/app/pages/book-card/book-card.component.html
+++ b/src/app/pages/book-card/book-card.component.html
@@ -1,14 +1,12 @@
 <mat-card class="card">
     <mat-card-header class="mb-2">
-      <mat-card-title>Once in America</mat-card-title>
-      <mat-card-subtitle>Ostap One-Gack</mat-card-subtitle>
+      <mat-card-title>{{book.title}}</mat-card-title>
+      <mat-card-subtitle>{{book.author}}</mat-card-subtitle>
     </mat-card-header>
-    <img class="max-h-[400px] object-cover object-cover" mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+    <img class="max-h-[400px] object-cover object-cover" [src]="'data:image/JPEG;base64,' + book.photo" alt="Photo of a Shiba Inu">
     <mat-card-content class="mt-2">
       <p>
-        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-        bred for hunting.
+        {{book.description}}
       </p>
     </mat-card-content>
     <mat-card-actions>
