Added ability to add and delete reviews

--- a/src/app/pages/logout-dialog/logout-dialog.component.html
+++ b/src/app/pages/logout-dialog/logout-dialog.component.html
@@ -1,4 +1,4 @@
-<div class="w-[27rem] p-6 rounded-lg shadow-md">
+<div class="w-full sm:w-[27rem] p-6 rounded-lg shadow-md">
     <h2>Do you really want to logout?</h2>
     <mat-dialog-actions>
         <button mat-button mat-dialog-close>No</button>
