--- a/src/app/pages/navbar/navbar.component.html
+++ b/src/app/pages/navbar/navbar.component.html
@@ -25,6 +25,10 @@
               <span>Library</span>
             </button>
             <button mat-menu-item>
+              <mat-icon>receipt_long</mat-icon>
+              <span>Wishlist</span>
+            </button>
+            <button mat-menu-item>
               <mat-icon>swap_horiz</mat-icon>
               <span>Exchanges</span>
             </button>
