Added wishlist functionality and page.

--- a/src/app/pages/navbar/navbar.component.html
+++ b/src/app/pages/navbar/navbar.component.html
@@ -24,7 +24,7 @@
               <mat-icon>book</mat-icon>
               <span>Library</span>
             </button>
-            <button mat-menu-item>
+            <button mat-menu-item (click)="goToWishlistPage()">
               <mat-icon>receipt_long</mat-icon>
               <span>Wishlist</span>
             </button>
