Provided exchange functionality

--- a/src/app/pages/navbar/navbar.component.html
+++ b/src/app/pages/navbar/navbar.component.html
@@ -28,7 +28,7 @@
               <mat-icon>receipt_long</mat-icon>
               <span>Wishlist</span>
             </button>
-            <button mat-menu-item>
+            <button mat-menu-item (click)="goToExchangesPage()">
               <mat-icon>swap_horiz</mat-icon>
               <span>Exchanges</span>
             </button>
