Added ability to get all books and search them by keyword

--- a/src/app/pages/navbar/navbar.component.html
+++ b/src/app/pages/navbar/navbar.component.html
@@ -4,7 +4,7 @@
         <a [routerLink]="['/home']"><span>Book<i>Swap</i></span></a>
       </div>
       <div>
-        <button mat-icon-button aria-label="Search">
+        <button mat-icon-button aria-label="Search" (click)="goToSearchPage()">
           <mat-icon>search</mat-icon>
         </button>
         <ng-template [ngIf]="!isLoggedIn()">
