--- a/src/app/pages/wishlist/wishlist.component.html
+++ b/src/app/pages/wishlist/wishlist.component.html
@@ -1,4 +1,4 @@
-<div class="pb-5">
+<div class="pb-5 pt-5">
     <div class="flex justify-center flex-wrap gap-5">
         <mat-card class="card" *ngFor="let book of books; trackBy: trackById">
             <mat-card-header class="mb-2">
