Updated profile page

--- a/src/app/pages/book-overview/book-overview.component.html
+++ b/src/app/pages/book-overview/book-overview.component.html
@@ -18,14 +18,14 @@
 
           <div class="mt-6 sm:gap-4 sm:items-center sm:flex sm:mt-8">
             <div class="flex items-center justify-center">
-                <button mat-stroked-button (click)="handleWishlistAction()" [disabled]="isUserBookOwner">
+                <button mat-flat-button color={{getWishlistButtonColor()}} (click)="handleWishlistAction()" [disabled]="isUserBookOwner">
                     <mat-icon>favorite</mat-icon>
                     <span *ngIf="isBookInWishlist">Remove from wishlist</span>
                     <span *ngIf="!isBookInWishlist">Add to wishlist</span>
                 </button>
             </div>
             <div class="flex items-center justify-center mt-4 sm:mt-0">
-                <button mat-flat-button color="primary" (click)="handleAddEchange()" [disabled]="isUserBookOwner || isBookInExchange">
+                <button mat-flat-button color="primary" (click)="handleAddEchange()" [disabled]="isUserBookOwner || isBookInExchange || !isBookReadyToExchange(book.status)">
                     <mat-icon>swap_horiz</mat-icon>
                     Exchange
                 </button>
