--- a/src/app/pages/exchanges/exchanges.component.html
+++ b/src/app/pages/exchanges/exchanges.component.html
@@ -9,17 +9,17 @@
           
             <ng-container matColumnDef="initiator">
               <th mat-header-cell *matHeaderCellDef> Initiator </th>
-              <td mat-cell *matCellDef="let element"> {{element.initiator}} </td>
+              <td mat-cell *matCellDef="let element"> <a class="font-medium text-[#3F51B5] hover:underline" target="_blank" [routerLink]="['/user',element.initiatorId,'profile']">{{element.initiator}}</a> </td>
             </ng-container>
           
             <ng-container matColumnDef="recipient">
               <th mat-header-cell *matHeaderCellDef> Recipient </th>
-              <td mat-cell *matCellDef="let element"> {{element.recipient}} </td>
+              <td mat-cell *matCellDef="let element"> <a class="font-medium text-[#3F51B5] hover:underline" target="_blank" [routerLink]="['/user',element.recipientId,'profile']">{{element.recipient}}</a> </td>
             </ng-container>
           
             <ng-container matColumnDef="book">
               <th mat-header-cell *matHeaderCellDef> Book </th>
-              <td mat-cell *matCellDef="let element"> {{element.book}} </td>
+              <td mat-cell *matCellDef="let element"> <a class="font-medium underline hover:text-[#3F51B5]" target="_blank" [routerLink]="['/book',element.bookId]">{{element.book}}</a> </td>
             </ng-container>
 
             <ng-container matColumnDef="confirmed">
@@ -52,17 +52,17 @@
           
             <ng-container matColumnDef="initiator">
               <th mat-header-cell *matHeaderCellDef> Initiator </th>
-              <td mat-cell *matCellDef="let element"> {{element.initiator}} </td>
+              <td mat-cell *matCellDef="let element"> <a class="font-medium text-[#3F51B5] hover:underline" target="_blank" [routerLink]="['/user',element.initiatorId,'profile']">{{element.initiator}}</a> </td>
             </ng-container>
           
             <ng-container matColumnDef="recipient">
               <th mat-header-cell *matHeaderCellDef> Recipient </th>
-              <td mat-cell *matCellDef="let element"> {{element.recipient}} </td>
+              <td mat-cell *matCellDef="let element"> <a class="font-medium text-[#3F51B5] hover:underline" target="_blank" [routerLink]="['/user',element.recipientId,'profile']">{{element.recipient}}</a> </td>
             </ng-container>
           
             <ng-container matColumnDef="book">
               <th mat-header-cell *matHeaderCellDef> Book </th>
-              <td mat-cell *matCellDef="let element"> {{element.book}} </td>
+              <td mat-cell *matCellDef="let element"> <a class="font-medium underline hover:text-[#3F51B5]" target="_blank" [routerLink]="['/book',element.bookId]">{{element.book}}</a> </td>
             </ng-container>
 
             <ng-container matColumnDef="confirmed">
