--- a/src/app/pages/navbar/navbar.component.html
+++ b/src/app/pages/navbar/navbar.component.html
@@ -31,6 +31,10 @@
               <mat-icon>swap_horiz</mat-icon>
               <span>Exchanges</span>
             </button>
+            <button mat-menu-item (click)="goToChattingPage()">
+              <mat-icon>chat</mat-icon>
+              <span>Chatting</span>
+            </button>
             <button mat-menu-item (click)="goToProfilePage()">
               <mat-icon>person</mat-icon>
               <span>Profile</span>
