Added the ability to send messages from the opened user profile

--- a/src/app/pages/add-book-form/add-book-form.component.html
+++ b/src/app/pages/add-book-form/add-book-form.component.html
@@ -27,6 +27,7 @@
                 <mat-label class="text-gray-400">Description</mat-label>
                 <textarea 
                     matInput 
+                    maxlength="1000"
                     formControlName="description"
                     placeholder="It's about...">
                 </textarea>
