--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -46,6 +46,7 @@
                                 <input 
                                     matInput
                                     required
+                                    maxlength="500"
                                     formControlName="message"
                                     class="py-2 px-3 text-gray-200 mt-1 focus:shadow-outline"
                                 />
