--- a/src/app/pages/user-profile/user-profile.component.html
+++ b/src/app/pages/user-profile/user-profile.component.html
@@ -31,7 +31,7 @@
                 <button mat-raised-button color="warn" (click)="handleOpenChangePasswordForm()">Reset password</button>
             </div>
             <div *ngIf="!isSameUser" class="flex pt-11 pb-8 justify-center">
-                <button mat-flat-button color="primary" (click)="handleWriteMessage(user.id)">Write Message</button>
+                <button mat-flat-button color="primary" (click)="handleWriteMessage()">Write Message</button>
             </div>
         </div>
 
