Fixed a bug in which books received after actions were not displayed correctly

--- a/src/app/pages/book-overview/book-overview.component.html
+++ b/src/app/pages/book-overview/book-overview.component.html
@@ -30,6 +30,9 @@
                     Exchange
                 </button>
             </div>
+            <div class="flex items-center justify-center mt-4 sm:mt-0">
+              <a target="_blank" [routerLink]="['/user',book.ownerId,'profile']" mat-button color="primary" target="_blank">Contact owner</a>
+            </div>
           </div>
 
           <hr class="my-6 md:my-8 border-gray-300" />
