--- a/src/app/pages/search/search.component.html
+++ b/src/app/pages/search/search.component.html
@@ -69,7 +69,7 @@
           </mat-form-field>
           <div class="book-cards">
               <div class="book-card__wrapper bg-white border border-gray-200 rounded-lg shadow" *ngFor="let book of books; trackBy: trackById">
-                  <a [routerLink]="['/book',book.id]">
+                  <a target="_blank" [routerLink]="['/book',book.id]">
                       <img class="rounded-t-lg w-full" [src]="'data:image/JPEG;base64,' + book.photo" alt="" />
                   </a>
                   <div class="p-5">
@@ -81,7 +81,7 @@
                       </p>
                       <p class="mb-3 font-normal text-gray-700">{{book.description}}</p>
                       <div class="flex justify-between items-center">
-                          <a mat-flat-button color="primary" [routerLink]="['/book',book.id]">
+                          <a target="_blank" mat-flat-button color="primary" [routerLink]="['/book',book.id]">
                               Read more
                               <mat-icon>arrow_right_alt</mat-icon>
                           </a>
