--- a/src/app/pages/reset-password-from/reset-password-from.component.html
+++ b/src/app/pages/reset-password-from/reset-password-from.component.html
@@ -5,15 +5,15 @@
             <input 
                 required
                 matInput
-                formControlName="current_password"
+                formControlName="currentPassword"
                 [type]="hidePassword ? 'password' : 'text'"
                 class="py-2 px-3 text-gray-200 mt-1 focus:shadow-outline"
             />
             <button mat-icon-button matSuffix (click)="hidePassword = !hidePassword" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hidePassword">
                 <mat-icon>{{hidePassword?'visibility_off':'visibility'}}</mat-icon>
             </button>
-            <mat-error *ngIf="changePasswordForm.controls.current_password.touched && changePasswordForm.controls.current_password.invalid">
-                <span *ngIf="changePasswordForm.controls.current_password.hasError('required')">The field is mandatory</span>
+            <mat-error *ngIf="changePasswordForm.controls.currentPassword.touched && changePasswordForm.controls.currentPassword.invalid">
+                <span *ngIf="changePasswordForm.controls.currentPassword.hasError('required')">The field is mandatory</span>
             </mat-error>
         </mat-form-field>
     </div>
@@ -23,14 +23,14 @@
             <input 
                 required
                 matInput
-                formControlName="new_password"
+                formControlName="newPassword"
                 type='password'
                 class="py-2 px-3 text-gray-200 mt-1 focus:shadow-outline"
             />
-            <mat-error *ngIf="changePasswordForm.controls.new_password.touched && changePasswordForm.controls.new_password.invalid">
-                <span *ngIf="changePasswordForm.controls.new_password.hasError('required')">The field is mandatory</span>
-                <span *ngIf="changePasswordForm.controls.new_password.hasError('minlength')">The password must contain at least 8 characters</span>
-                <span *ngIf="changePasswordForm.controls.new_password.hasError('pattern') && !changePasswordForm.controls.new_password.hasError('minlength')">{{passwordErrorMessage(changePasswordForm.controls.new_password.value)}}</span>
+            <mat-error *ngIf="changePasswordForm.controls.newPassword.touched && changePasswordForm.controls.newPassword.invalid">
+                <span *ngIf="changePasswordForm.controls.newPassword.hasError('required')">The field is mandatory</span>
+                <span *ngIf="changePasswordForm.controls.newPassword.hasError('minlength')">The password must contain at least 8 characters</span>
+                <span *ngIf="changePasswordForm.controls.newPassword.hasError('pattern') && !changePasswordForm.controls.newPassword.hasError('minlength')">{{passwordErrorMessage(changePasswordForm.controls.newPassword.value)}}</span>
             </mat-error>
         </mat-form-field>
     </div>
@@ -40,15 +40,15 @@
             <input 
                 required
                 matInput
-                formControlName="confirm_password"
+                formControlName="confirmPassword"
                 type='password'
                 class="py-2 px-3 text-gray-200 mt-1 focus:shadow-outline"
             />
-            <mat-error *ngIf="changePasswordForm.controls.confirm_password.touched && changePasswordForm.controls.confirm_password.invalid">
-                <span *ngIf="changePasswordForm.controls.confirm_password.hasError('required')">The field is mandatory</span>
+            <mat-error *ngIf="changePasswordForm.controls.confirmPassword.touched && changePasswordForm.controls.confirmPassword.invalid">
+                <span *ngIf="changePasswordForm.controls.confirmPassword.hasError('required')">The field is mandatory</span>
             </mat-error>            
         </mat-form-field>
-        <mat-error class="text-center" *ngIf="changePasswordForm.controls.confirm_password.touched && !changePasswordForm.controls.confirm_password.invalid">
+        <mat-error class="text-center" *ngIf="changePasswordForm.controls.confirmPassword.touched && !changePasswordForm.controls.confirmPassword.invalid">
             <span *ngIf="!passwordsAreMatch()">Passwords do not match</span>
         </mat-error>  
     </div>
