Added some models

--- a/src/app/pages/add-book-form/add-book-form.component.html
+++ b/src/app/pages/add-book-form/add-book-form.component.html
@@ -6,6 +6,7 @@
                 <input 
                     required
                     matInput
+                    maxlength="50"
                     formControlName="title"
                     class="py-2 px-3 text-gray-200 mt-1 focus:shadow-outline"
                 />
@@ -17,6 +18,7 @@
                 <input 
                     required
                     matInput
+                    maxlength="50"
                     formControlName="author"
                     class="py-2 px-3 text-gray-200 mt-1 focus:shadow-outline"
                 />
