--- a/src/app/pages/auth/auth.component.html
+++ b/src/app/pages/auth/auth.component.html
@@ -21,6 +21,7 @@
                                 <input 
                                     required
                                     matInput
+                                    maxlength="35"
                                     formControlName="nickname"
                                     class="py-2 px-3 text-gray-200 mt-1 focus:shadow-outline"
                                 />
