--- a/src/app/pages/user-profile/user-profile.component.html
+++ b/src/app/pages/user-profile/user-profile.component.html
@@ -39,7 +39,7 @@
 
     <div class="w-full lg:w-2/5">
         <!-- Big profile image for side bar (desktop) -->
-        <img [src]="'data:image/JPEG;base64,' + user.photo" class="rounded-none lg:rounded-lg shadow-2xl hidden lg:block">
+        <img [src]="'data:image/JPEG;base64,' + user.photo" class="rounded-none lg:rounded-lg shadow-2xl hidden lg:block" alt="Profile image of {{user.nickname}}">
 
     </div>
 
