--- a/src/app/pages/book-overview/book-overview.component.html
+++ b/src/app/pages/book-overview/book-overview.component.html
@@ -2,8 +2,8 @@
     <div class="max-w-screen-xl px-4 mx-auto 2xl:px-0">
       <div class="lg:grid lg:grid-cols-2 lg:gap-8 xl:gap-16">
         <div class="shrink-0 max-w-md lg:max-w-lg mx-auto">
-          <img class="w-full rounded-lg" [src]="'data:image/JPEG;base64,' + book.photo" alt="" />
-          <img class="w-full rounded-lg hidden" [src]="'data:image/JPEG;base64,' + book.photo" alt="" />
+          <img class="w-full rounded-lg" [src]="'data:image/JPEG;base64,' + book.photo" alt="Photo of the book {{book.title}}" />
+          <img class="w-full rounded-lg hidden" [src]="'data:image/JPEG;base64,' + book.photo" alt="Photo of the book {{book.title}}" />
         </div>
 
         <div class="mt-6 sm:mt-8 lg:mt-0">
