--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -20,7 +20,7 @@
                         <div class="flex flex-col w-full max-w-[320px] leading-1.5 p-4 border-gray-200 bg-gray-200 rounded-tr-xl rounded-bl-xl rounded-br-xl">
                            <div class="flex items-center space-x-2 rtl:space-x-reverse">
                               <span class="text-sm font-semibold text-gray-900">{{message.nickname}}</span>
-                              <span class="text-sm font-normal text-gray-500">{{formatDate(message.timestamp)}}</span>
+                              <span class="text-sm font-normal text-gray-500">{{formatDate(message.timestamp.toString())}}</span>
                            </div>
                            <p class="text-sm font-normal py-2.5 text-gray-900">{{message.content}}</p>
                         </div>
@@ -30,7 +30,7 @@
                         <div class="flex flex-col w-full max-w-[320px] leading-1.5 p-4 border-[#3F51B5] bg-[#3F51B5] rounded-tl-xl rounded-bl-xl rounded-br-xl">
                            <div class="flex items-center space-x-2 rtl:space-x-reverse">
                               <span class="text-sm font-semibold text-gray-50">{{message.nickname}}</span>
-                              <span class="text-sm font-normal text-gray-200">{{formatDate(message.timestamp)}}</span>
+                              <span class="text-sm font-normal text-gray-200">{{formatDate(message.timestamp.toString())}}</span>
                            </div>
                            <p class="text-sm font-normal py-2.5 text-gray-50">{{message.content}}</p>
                         </div>
